syntax = "proto3";

package pcbook;

import "google/protobuf/timestamp.proto";
import "proto/keyboard_message.proto";
import "proto/memory_message.proto";
import "proto/processor_message.proto";
import "proto/screen_message.proto";
import "proto/storage_message.proto";

option go_package = "./;pcbook";

message Laptop {
  string id = 1;
  string brand = 2;
  string name = 3;
  CPU cpu = 4;
  Memory ram = 5;
  // a laptop can have multiple gpus, so we use "repeated" keywords
  repeated GPU gpus = 6;
  repeated Storage storages = 7;
  Screen screen = 8;
  Keyboard keyboard = 9;

  // the weight can either be in kg or pounds
  // we use another keyword, oneof
  oneof weight {
    double weight_kg = 10;
    double weight_lb = 11;
  }

  double price_usd = 12;
  uint32 release_year = 13;

  google.protobuf.Timestamp updated_at = 14;
}
